update listing
